# menu-mvp-streamlit

./: .cruft.json  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  api_client.py  app.py  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: lint.yml  test.yml
docs/contributing/: 1.-contributing-guide.md  4.-acknowledgements.md
pages/: 1_ingredients.py  2_recipes.py  3_planning.py  4_chat_ai.py
scripts/: clean.sh  docker-test.sh  done.sh  lint.sh  test.sh
tests/: test_api_client.py  test_app.py  test_integration.py  test_pages.py
